# vote.rs

./: Cargo.toml  LICENSE-MIT  Procfile  README.md  Rocket.toml  RustConfig  schema.sql
src/: main.rs  schema.rs
templates/: base.html.tera  index.html.tera  style.css  vote.html.tera
