[package]
name = "voters"
version = "0.0.1"
publish = false

license = "MIT/Apache-2.0"

[dependencies]
rocket = "0.4.5"
serde = "1.0.116"
serde_json = "1.0.58"
serde_derive = "1.0.116"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
itertools = "0.9.0"
rcir = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates", "diesel_postgres_pool", "serve"]

