[package]
name = "vote"
version = "0.0.1"
publish = false

license = "MIT/Apache-2.0"

[dependencies]
rocket = "0.4.7"
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
itertools = "0.10.0"
rcir = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dependencies.rocket_contrib]
version = "0.4.7"
features = ["tera_templates", "diesel_postgres_pool", "serve", "json"]

